overflow issue fixed

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,7 +29,6 @@ $translate-value: calc($button-width * 0.17);
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 .text-sideways-right {
